@@ -1,3 +1,11 @@
+2001-06-23  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/add_window.c (setup_icon_font):
+	adjust icon title y offset when the icon font changes
+
+	* libs/GetFontSet.c (GetFontSetOrFixed):
+	reformatted error message
+
 2001-06-23  Dan Espen  <dane@mk.telcordia.com>
 
 	* fvwm/fvwm2.1: Make the multiple Iconboxes rule a little clearer.
